--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zvs001/s3-utils",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
